--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@
 
 body{
     font-family: 'Advent Pro', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    background-color: rgb(0, 0, 0);
+    background-image: url("./images/akira-background.jpg");
 }
 
 .header, .footer{
-    background-color: #001627;
+    background-color: rgba(0, 0, 0, 0.5); ;
     color: white;
     height: 100px;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,11 +23,12 @@ body{
 .card{
     width: 100vw;
     height: 100vh;
-    background: rgb(20, 50, 100, 0.8);
+    background: rgba(255, 255, 255, 0.8);
     color: white;
     display: flex;
-    align-items: center;
+    align-items:flex-end;
     justify-content: center;
+    flex-direction: column;
     position: sticky;
     top: 0;
     left: 0;
@@ -41,9 +44,21 @@ body{
     object-fit: cover;
 }
 
+.card-content{
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .header{
     position:sticky;
     top: 0;
     order: 0;
-    z-index: 6;
+    z-index: 3;
 }
