--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Advent Pro', sans-serif;
 }
 
 body{
-    font-family: 'Advent Pro', sans-serif;
+    
     background-color: rgb(0, 0, 0);
-    background-image: url("./images/akira-background.jpg");
+    /* background-image: url("./images/akira-background.jpg"); */
 }
 
 .header, .footer{
@@ -26,9 +27,8 @@ body{
     background: rgba(255, 255, 255, 0.8);
     color: white;
     display: flex;
-    align-items:flex-end;
+    align-items:center;
     justify-content: center;
-    flex-direction: column;
     position: sticky;
     top: 0;
     left: 0;
@@ -52,8 +52,9 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
+    align-items:center;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 
 .header{
@@ -61,4 +62,14 @@ body{
     top: 0;
     order: 0;
     z-index: 3;
+}
+
+.card-content h1{
+    font-size: 40px;
+    text-shadow: 1px 1px 10px black;
+}
+
+.card-content p{
+    font-size: 20px;
+    text-shadow: 1px 1px 10px black;
 }
