--- a/style.css
+++ b/style.css
@@ -5,24 +5,45 @@
     font-family: 'Advent Pro', sans-serif;
 }
 
-body{
-    
-    background-color: rgb(0, 0, 0);
-    /* background-image: url("./images/akira-background.jpg"); */
+#container{
+    width: 100%;
 }
 
-.header, .footer{
+/* .header, .footer{
     background-color: rgba(0, 0, 0, 0.5); ;
     color: white;
     height: 100px;
-    width: 100vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.header{
+    background-color: rgba(0, 0, 0, 0.5); ;
+    color: white;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: flex-start;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+}
+
+.footer{
+    background-color: rgba(0, 0, 0, 0.5); ;
+    color: white;
+    height: 100px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .card{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: rgba(255, 255, 255, 0.8);
     color: white;
@@ -33,6 +54,19 @@ body{
     top: 0;
     left: 0;
 }
+
+/* .card{
+    width: 100%;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.8);
+    color: white;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+} */
 
 .card img{
     position: absolute;
@@ -57,13 +91,6 @@ body{
     justify-content: center;
 }
 
-.header{
-    position:sticky;
-    top: 0;
-    order: 0;
-    z-index: 3;
-}
-
 .card-content h1{
     font-size: 40px;
     text-shadow: 1px 1px 10px black;
@@ -72,4 +99,25 @@ body{
 .card-content p{
     font-size: 20px;
     text-shadow: 1px 1px 10px black;
+    text-align:justify;
+    text-align: center;
 }
+
+                                    /* Skill bars */
+
+.container {
+    width: 25%; 
+    background-color: #c5c5c5; 
+  }
+  
+  .skills {
+    text-align: right; 
+    padding-top: 10px; 
+    padding-bottom: 10px; 
+    color: white; 
+  }
+  
+  .html {width: 60%; background-color: #04AA6D;} 
+  .css {width: 50%; background-color: #2196F3;} 
+  .js {width: 5%; background-color: #f44336;} 
+  .php {width: 5%; background-color: #808080;} 
