--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.bunny.net/css?family=advent-pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|open-sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i);
+
 *{
     margin: 0;
     padding: 0;
@@ -7,9 +9,10 @@
 
 #container{
     width: 100%;
+    background-color: #000000;
 }
 
-.header, .footer{
+/* .header, .footer{
     background-color: rgba(0, 0, 0, 0.5); ;
     color: white;
     height: 100px;
@@ -17,7 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .header{
     background-color: rgba(0, 0, 0, 0.5); ;
@@ -33,7 +36,7 @@
 }
 
 .footer{
-    background-color: rgba(0, 0, 0, 0.5); ;
+    background-color: rgb(0, 0, 0); ;
     color: white;
     height: 100px;
     width: 100%;
@@ -45,7 +48,8 @@
 .card{
     width: 100%;
     height: 100vh;
-    background: rgba(255, 255, 255, 1);
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 80%, rgba(197,197,197,0) 100%);
     color: white;
     display: flex;
     align-items:center;
@@ -67,6 +71,12 @@
     top: 0;
     left: 0;
 } */
+
+.card h1{
+    color: #16a085;
+    font-family: 'Advent Pro', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
 
 .card img{
     position: absolute;
@@ -107,7 +117,7 @@
 
 .container {
     width: 25%; 
-    background-color: #c5c5c5; 
+    background-color: #000000; 
   }
   
   .skills {
@@ -122,7 +132,7 @@
   .js {width: 5%; background-color: #f44336;} 
   .php {width: 5%; background-color: #808080;} 
 
-                                    /* ICI l'animation de mon Header */
+            /*! ICI l'animation de mon Header */
 
 .content {
 position: absolute;
@@ -131,7 +141,8 @@ left: 50%;
 transform: translate(-50%, -50%);
 height: 160px;
 overflow: hidden;
-font-family: "Lato", sans-serif;
+font-family: 'Advent Pro', sans-serif;
+font-family: 'Open Sans', sans-serif;
 font-size: 35px;
 line-height: 40px;
 color: #ecf0f1;
@@ -182,8 +193,33 @@ animation-duration: 10s;
 animation-iteration-count: infinite;
 }
 .content__container__list__item {
+    color: #16a085;
 line-height: 40px;
 margin: 0;
+}
+        /*! ICI l'animation de ma souris */
+.circle {
+    border: 2px solid white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px white;
+    pointer-events: none;
+    position: fixed;
+    /* top: -10rem;
+    left: -10rem; */
+    height: 2rem;
+    width: 2rem;
+    transition: transform 0.4s, background 0.4s;
+    z-index: 9999;
+}
+
+.circle.big {
+    background: white;
+    transform: scale(2);
+}
+
+            /*! ICI l'adaptation aux différents ecrans */
+@media screen and (max-width: 900px){
+    
 }
 
 @-webkit-keyframes opacity {
@@ -242,3 +278,4 @@ margin: 0;
     transform: translate3d(0, -25%, 0);
 }
 }
+
