--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 #container{
     width: 100%;
-    background-color: #000000;
+    background-color: #006f61;
 }
 
 /* .header, .footer{
@@ -23,7 +23,7 @@
 } */
 
 .header{
-    background-color: rgba(0, 0, 0, 0.5); ;
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     height: 100px;
     width: 100%;
@@ -36,7 +36,7 @@
 }
 
 .footer{
-    background-color: rgb(0, 0, 0); ;
+    background-color: #006f61; ;
     color: white;
     height: 100px;
     width: 100%;
@@ -51,8 +51,6 @@
     box-shadow: 0 0 10px white;
     pointer-events: none;
     position: fixed;
-    /* top: -10rem;
-    left: -10rem; */
     height: 2rem;
     width: 2rem;
     transition: transform 0.4s, background 0.4s;
@@ -69,8 +67,8 @@
 .card{
     width: 100%;
     height: 100vh;
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 80%, rgba(197,197,197,0) 100%);
+    background: #006f61;
+    background: linear-gradient(0deg, rgba(0,111,97,1) 80%, rgba(197,197,197,0) 100%);
     color: white;
     display: flex;
     align-items:center;
@@ -80,13 +78,13 @@
     left: 0;
 }
 
-/* .card h1{
+.card h1{
     position: relative; 
     color: #16a085; 
     font-family: 'Advent Pro', sans-serif;
     font-family: 'Open Sans', sans-serif;
-    z-index: 200;
-} */
+    z-index: 100;
+}
 
 /* .card img{
     position: absolute;
@@ -221,6 +219,7 @@ animation-iteration-count: infinite;
 line-height: 40px;
 margin: 0;
 }
+
 
             /*! ICI l'adaptation aux différents ecrans */
 @media screen and (max-width: 900px){
