--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,43 @@ html{
 }
 
 body{
-    background-color: #07001c
+    height: 100vh;
+    background-color: #07001c;
+}
+
+header{
+    position: relative;
+    padding: 0 2rem;
+}
+
+.navbar{
+    width: 100%;
+    height: 60px;
+    max-width: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .links{
+    display: flex;
+    gap: 2rem;
+}
+
+.navbar .toggle_btn{
+    color: #7547FF;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
+}
+
+.navbar a{
+    color: #7547FF;
+}
+
+.navbar a:hover{
+    color: #A2A3BB;
 }
 
 section{
@@ -22,6 +58,7 @@ section{
     align-items: center;
     padding: 80px 100px;
     color: #fff;
+    text-shadow: 1px 1px 5px #000000;
 }
 
 .container{
@@ -61,6 +98,7 @@ section{
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    /* object-position: 50% top; */
 }
 
 .content .text-box{
@@ -141,4 +179,8 @@ section{
 
 .sec-03{
     margin-bottom: 100px;
+}
+
+i:hover{
+    color: #7547FF;
 }
