--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-    margin: 0
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "poppins", sans-serif;
@@ -12,23 +12,38 @@ html{
 }
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #07001c;
+}
+
+li{
+    list-style: none;
 }
 
 header{
     position: relative;
     padding: 0 2rem;
 }
+            /* Navbar */
 
 .navbar{
     width: 100%;
     height: 60px;
-    max-width: 100vh;
     margin: 0 auto;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    background-color: #0B0014;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: 'Alumni Sans', sans-serif;
+    font-size: 1.5rem;
+}
+
+.navbar .logo a{
+    font-size: 1.5rem;
+    font-weight: bold;
+
 }
 
 .navbar .links{
@@ -49,6 +64,33 @@ header{
 
 .navbar a:hover{
     color: #A2A3BB;
+}
+
+        /* DROPDOWNMENU */
+.dropdown_menu{
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    width: 300px;
+    height: 0;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.3s ease;
+}
+
+.dropdown_menu.open{
+    height: 240px;
+}
+
+.dropdown_menu li{
+    font-size: 1rem;
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 section{
@@ -78,7 +120,7 @@ section{
     position: relative;
     width: 1150px;
     display: flex;
-    justify-content: center;$
+    justify-content: center;
     align-items: center;
 }
 
@@ -98,12 +140,13 @@ section{
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    transform: scaleX(-1);
     /* object-position: 50% top; */
 }
 
 .content .text-box{
     z-index: 222;
-    background: rgba(255, 255, 255e, 0.1);
+    background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(20px);
     padding: 40px;
     max-width: 400px;
@@ -184,3 +227,31 @@ section{
 i:hover{
     color: #7547FF;
 }
+
+
+
+/* Media Queries */
+/*Responsive design*/
+
+@media (max-width: 992px){
+    .navbar .links{
+        display: none;
+    }
+    .navbar .toggle_btn{
+        display: block;
+    }
+    .dropdown_menu{
+        display: block;
+    }
+    .content .image{
+        position: relative;
+        width: 400px;
+        height: 200px;
+        overflow: hidden;
+    }
+    .main-title{
+        font-size: 1em;
+        margin-bottom: 50px;
+    }
+}
+
