--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ header{
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.3s ease;
+    z-index: 999;
 }
 
 .dropdown_menu.open{
